Done these fixes:- 1. Fixed the initial positions of index strategy sliders when the page loads the first time 2. Fixed the z-index issue of info pop-up on 3rd step of HS form under Growth Parameters

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3515,6 +3515,7 @@ input[type=number] {
   left: 5rem;
   top: -3.2rem;
   display: none;
+  z-index: 100;
 }
 .info-message-participationRate {
   position: absolute;
